<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <import type="com.btd.mystyle.utils.FontUtils.FontStyle"></import>

        <variable
            name="User"
            type="com.btd.mystyle.data.User"></variable>

        <variable
            name="Presenter"
            type="com.btd.mystyle.home.profile.ProfileContract.Presenter"></variable>

    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:clipToPadding="false"
                app:contentInsetEnd="0dp"
                app:contentInsetLeft="0dp"
                app:contentInsetRight="0dp"
                app:contentInsetStart="0dp"
                app:layout_scrollFlags="scroll|enterAlways">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp50"
                    android:background="@color/colorPrimary">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:gravity="center"
                        android:text="@string/profile_tv_title"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/sp14"
                        app:font="@{FontStyle.ROBOTO_MEDIUM}" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="@string/profile_tv_setting"
                        android:textSize="@dimen/sp14"
                        app:font="@{FontStyle.ROBOTO_MEDIUM}" />

                </RelativeLayout>
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="fill_vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="@dimen/dp140"
                        android:layout_height="@dimen/dp140"
                        android:background="@drawable/ic_user" />

                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp10"
                        android:layout_marginTop="@dimen/dp10"
                        android:layout_toEndOf="@+id/imageView"
                        android:text="@{User.username}"
                        android:textColor="@color/color_black"
                        android:textSize="@dimen/sp16"
                        app:font="@{FontStyle.ROBOTO_MEDIUM}" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_name"
                        android:layout_marginLeft="@dimen/dp10"
                        android:layout_marginRight="@dimen/dp10"
                        android:layout_marginTop="@dimen/dp10"
                        android:layout_toEndOf="@+id/imageView"
                        android:ellipsize="end"
                        android:maxLines="3"
                        android:text="@{User.description}"
                        android:textColor="@color/color_black"
                        android:textSize="@dimen/sp14"
                        app:font="@{FontStyle.ROBOTO_REGULAR}" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp30"
                        android:layout_alignParentBottom="true"
                        android:layout_toEndOf="@+id/imageView"
                        android:orientation="horizontal">

                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="@dimen/dp10"
                            android:layout_marginRight="@dimen/dp5"
                            android:layout_weight="1"
                            android:background="@color/color_black1"
                            android:onClick="@{() -> Presenter.onClickEditProfile()}"
                            android:text="@string/profile_btn_mystyle"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/sp13"
                            app:font="@{FontStyle.ROBOTO_REGULAR}" />

                        <Button

                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="@dimen/dp5"
                            android:layout_marginRight="@dimen/dp10"
                            android:layout_weight="1"
                            android:background="@color/color_black1"
                            android:text="@string/profile_btn_follow"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/sp13"
                            app:font="@{FontStyle.ROBOTO_REGULAR}" />
                    </LinearLayout>
                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp10"
                    android:layout_marginTop="@dimen/dp20"
                    android:text="@string/profile_btn_mystyle"
                    android:textColor="@color/color_black1"
                    android:textSize="@dimen/sp14"
                    app:font="@{FontStyle.ROBOTO_REGULAR}" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rcv_mystyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp140"
                    android:layout_marginLeft="@dimen/dp10"
                    android:layout_marginRight="@dimen/dp10"
                    android:layout_marginTop="@dimen/dp10"></android.support.v7.widget.RecyclerView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp10"
                    android:layout_marginTop="@dimen/dp20"
                    android:text="@string/profile_tv_post"
                    android:textColor="@color/color_black1"
                    android:textSize="@dimen/sp14"
                    app:font="@{FontStyle.ROBOTO_REGULAR}" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rcv_posts"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dp10"
                    android:layout_marginRight="@dimen/dp10"
                    android:layout_marginTop="@dimen/dp10"></android.support.v7.widget.RecyclerView>

            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>

        <ProgressBar
            android:visibility="gone"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center" />

    </android.support.design.widget.CoordinatorLayout>
</layout>